<resources>
    <string name="app_name">Meal Counter</string>
    <string name="notification_body">Χρεώθηκες γεύμα από το μαγειρείο σήμερα;</string>
    <string name="usage">Επέλεξε την επιθυμητή ώρα που θέλεις να λαμβάνεις την ειδοποίηση καθημερινά και πάτησε \"εφαρμογή\".</string>
    <string name="apply_button">ΕΦΑΡΜΟΓΗ</string>
    <string name="logButton">ΙΣΤΟΡΙΚΟ</string>
    <string name="close">ΚΛΕΙΣΙΜΟ</string>
    <string name="logoDescription">Meal Counter Logo</string>
    <string name="info">Πάτα \"ΡΥΘΜΙΣΗ\" για να επιλέξεις την ώρα που θελεις να λαμβάνεις την ειδοποίηση\nκαι \"ΙΣΤΟΡΙΚΟ\" για να δεις πληροφορίες για τα γεύματα που έχεις καταναλώσει.</string>
    <string name="remainingEnd">\ διαθέσιμα γεύματα</string>
    <string name="remainingStart">Έχεις ακόμη\ \ </string>
    <string name="deactivate">ΑΠΕΝΕΡΓΟΠΟΙΗΣΗ</string>
    <string name="add">ΠΡΟΣΘΗΚΗ</string>
    <string name="saved">Το γεύμα προστέθηκε.</string>
    <string name="notSaved">Παρουσιάστηκε πρόβλημα!</string>
    <string name="dateHint">ΗΗ/ΜΜ/ΕΕΕΕ</string>
    <string name="slash">/</string>
    <string name="usageAdd">Αν ξέχασες κάποιο γεύμα μπορείς να το προσθέσεις χειροκίνητα πατώντας \"ΠΡΟΣΘΗΚΗ\".\nΈπειτα επέλεξε την ημερομηνία πάτα \"OK\".</string>
    <string name="infoHistory">Παρακάτω μπορείς να δεις το ιστορικό σου. Των προηγούμενων ημερών. Πάτησε πάνω στο γεύμα που θέλεις να επεξεργαστείς και επέλεξε \"ΔΙΟΡΘΩΣΗ\" για να διορθώσεις την ημερομηνία, ή διαγραφή για να αφαιρέσεις την καταχώρηση.</string>
    <string name="alarmStart">Ώρα ειδοποίησης:</string>
</resources>
