<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="#ff1a1e23"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginVertical="8dp"
        android:contentDescription="@string/logoDescription"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#81ffffff"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/remainingStart"
            android:textColor="#81ffffff"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="#81ffffff"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/remainingEnd"
            android:textColor="#81ffffff"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/alarmStart"
            android:textColor="#81ffffff"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/alarmTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="4:30μμ"
            android:textColor="#81ffffff"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
            android:id="@+id/informationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:paddingHorizontal="30dp"
            android:text="@string/info"
            android:textAlignment="center"
            android:textColor="#81ffffff"
            android:textSize="18sp" />

</LinearLayout>