<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff1a1e23"
    android:textColor="#81ffffff">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/infoHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:paddingHorizontal="30dp"
            android:text="@string/infoHistory"
            android:textAlignment="center"
            android:textColor="#81ffffff"
            android:paddingVertical="10dp"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginHorizontal="20dp"
            android:background="#81ffffff"/>

        <TextView
            android:id="@+id/infoAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:paddingHorizontal="30dp"
            android:text="@string/usageAdd"
            android:textAlignment="center"
            android:textColor="#81ffffff"
            android:paddingVertical="10dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginVertical="8dp"
            android:backgroundTint="#ff1748"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/add"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>