<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff1a1e23"
    android:textColor="#81ffffff">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:headerBackground="#ff1a1e23"
            android:numbersBackgroundColor="#ff363f49"
            android:numbersSelectorColor="#ff1748"
            android:numbersTextColor="#eeeeee"
            android:timePickerMode="clock" />

        <TextView
            android:id="@+id/informationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:paddingHorizontal="30dp"
            android:text="@string/usage"
            android:textAlignment="center"
            android:textColor="#81ffffff"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/deactivateBtn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/custom_button"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/deactivate"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:stateListAnimator="@animator/button_state_list_anim"/>

            <Button
                android:id="@+id/applyBtn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/custom_button"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/apply_button"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>